--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class="hour col-md-1 pt-4">9am</div>
+        <textarea id="9" class="description col-xs-1 col-sm-8 col-md-10"></textarea>
+        
+
+      </div>
+      
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
