psuedo coding my javascript so that I know exactly what it will execute for the app

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Timeblocks go here -->
       <div class="row time-block">
         <div class="hour col-md-1 pt-4">9am</div>
-        <textarea id="9" class="description col-xs-1 col-sm-8 col-md-10"></textarea>
+        <textarea id="9" class="description col-xs-1 col-md-8 col-md-10"></textarea>
         <button class="saveBtn col-md-1 btn btn-info" data-hour="9AM"><i class="fas fa-save"></i></button>
       </div>
       
