thought I would mess around with the grid, but changed it back

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row time-block">
         <div class="hour col-md-1 pt-4">9am</div>
         <textarea id="9" class="description col-xs-1 col-md-8 col-md-10"></textarea>
-        <button class="saveBtn col-md-1 btn btn-info"><i class="fas fa-save"></i></button>
+        <button class="saveBtn col-md-1 btn"><i class="fas fa-save"></i></button>
       </div>
       
       <div class="row time-block">
